--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.aksahyaap.mouseremote"
+        applicationId "com.akshayaap.mouseremote"
         minSdk 21
         targetSdk 32
         versionCode 1
