--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,11 @@ plugins {
 }
 
 android {
+    signingConfigs {
+        debug {
+            storeFile file('/home/akshay/Documents/release_key/panditbook/android_release.jks')
+        }
+    }
     compileSdk 32
 
     defaultConfig {
