--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.akshayaap.mouseremote">
+    package="com.akshayaap.mouseremote" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -14,16 +14,16 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/ic_mouseremote"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MouseRemote">
+        android:theme="@style/Theme.MouseRemote" >
         <activity
-            android:name=".KeyBoard"
+            android:name=".Keyboard"
             android:exported="false" />
         <activity
             android:name=".TouchPad"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
