--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,23 +15,24 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MouseRemote">
         <activity
-            android:name=".Keyboard"
+            android:name=".ui.activities.Keyboard"
             android:exported="true"
-            android:screenOrientation="landscape" >
-        </activity>
-
-        <activity
-            android:name=".TouchPad"
-            android:exported="true">
-        </activity>
-
-        <activity
-            android:name=".MainActivity"
-            android:exported="true">
+            android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".ui.activities.TouchPad"
+            android:exported="true" />
+
+        <activity
+            android:name=".ui.activities.MainActivity"
+            android:exported="true">
+
+
         </activity>
 
         <meta-data
