--- a/app/.gitignore
+++ b/app/.gitignore
@@ -4,9 +4,14 @@
 [Rr]elease/
 [Dd]ebug/
 
-!src/**/[Bb]uild/
-!src/**/[Rr]elease/
-!src/**/[Dd]ebug/
+!src/main/java/**/[Bb]uild/
+!src/main/java/**/[Rr]elease/
+!src/main/java/**/[Dd]ebug/
+
+
+!src/test/java/**/[Bb]uild/
+!src/test/java/**/[Rr]elease/
+!src/test/java/**/[Dd]ebug/
 
 # Local configuration file (sdk path, etc)
 local.properties
