--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,11 +6,11 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.akshayaap.mouseremote"
+        applicationId "com.akshayaap.touchdroid"
         minSdk 23
         targetSdk 32
-        versionCode 5
-        versionName "1.5.0"
+        versionCode 6
+        versionName "2.0.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
