--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.akshayaap.touchdroid">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -15,23 +14,23 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MouseRemote">
         <activity
-            android:name="com.akshayaap.touchdroid.ui.activities.Keyboard"
+            android:name=".ui.activities.DebugerList"
+            android:exported="false" />
+        <activity
+            android:name=".ui.activities.Keyboard"
             android:exported="true"
             android:screenOrientation="landscape" />
-
         <activity
-            android:name="com.akshayaap.touchdroid.ui.activities.TouchPad"
+            android:name=".ui.activities.TouchPad"
             android:exported="true" />
-
         <activity
-            android:name="com.akshayaap.touchdroid.ui.activities.MainActivity"
+            android:name=".ui.activities.MainActivity"
             android:exported="true">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
 
         <meta-data
