--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,18 +26,22 @@ android {
         targetCompatibility JavaVersion.VERSION_17
     }
     namespace 'com.akshayaap.touchdroid'
+    dependenciesInfo {
+        includeInApk false
+        includeInBundle false
+    }
 }
 
 dependencies {
 
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.11.0'
+    implementation 'androidx.appcompat:appcompat:1.7.0'
+    implementation 'com.google.android.material:material:1.12.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.activity:activity:1.8.2'
+    implementation 'androidx.activity:activity:1.9.0'
     //noinspection GradleDynamicVersion
     testImplementation 'junit:juni t:4.13.2'
-    testImplementation 'org.testng:testng:7.9.0'
-    testImplementation 'org.testng:testng:7.9.0'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    testImplementation 'org.testng:testng:7.10.2'
+    testImplementation 'org.testng:testng:7.10.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
 }
